# shardseed

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: native-builds.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/shardseed-catalogue/: Cargo.toml
crates/shardseed-catalogue/src/: lib.rs
crates/shardseed-core/: Cargo.toml
crates/shardseed-core/src/: lib.rs
crates/shardseed-crypto/: Cargo.toml
crates/shardseed-crypto/src/: lib.rs
crates/shardseed-inspect/: Cargo.toml
crates/shardseed-inspect/src/: lib.rs
crates/shardseed-manifest/: Cargo.toml
crates/shardseed-manifest/src/: lib.rs
crates/shardseed-publish/: Cargo.toml
crates/shardseed-publish/src/: lib.rs
crates/shardseed-storage/: Cargo.toml
docs/: development.md  native-apps.md  protocol.md  security.md
src/: errors.ts  fsutil.ts  index.ts
src/catalogue/: catalogue.ts
src/cli/: main.ts
src/crypto/: keys.ts
src/inspect/: gguf.ts
src/manifest/: canonical.ts  json.ts  signing.ts  types.ts  validate.ts
src/publish/: publish.ts
src/storage/: store.ts
src/torrent/: engine.ts  jobs.ts  local-service.ts  mesh.ts  torrent.ts
src/types/: torrent-packages.d.ts
tests/: mesh.test.ts  protocol.test.ts  publish-download-verify.test.ts  torrent-first.test.ts  torrent-resume.test.ts
(+4 files in other folders)
