[package]
name = "shardseed-desktop"
version = "0.1.0"
edition.workspace = true

[lib]
name = "shardseed_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "=2.8.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "=2.4.0", features = [] }
